add design pattern
se agrega un patrón faltante al contenido de la página principal.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,12 +12,20 @@
             <ul>
                 <li><h2>Adaptador(ORM - Pony)</h2><p>
                     El empleo de una biblioteca de ORM (Object Relational Mapping)
-                    elimina la dependencia de una base de datos específica, permitiendo
-                    reutilizar el código y escribir las consultas de una forma más
-                    idomática en Python.
+                    elimina la dependencia de una base de datos específica,
+                    permitiendo reutilizar el código y escribir las consultas de
+                    una forma más idomática en Python.
                 </p></li>
-                <li><h2>lorem ipsum</h2><p>
-                    lorem ipsum dolor sit amet, consectetur adipiscing elit
+                <li><h2>Cadena de responsabilidad(servidor web)</h2><p>
+                    Flask (así como express) utiliza este patrón para distribuir
+                    los requests HTTP entre sus endpoints. Cada ruta en el
+                    framework consiste en una función que hace match a la URL
+                    solicitada. Si hay match, se ejecuta el código
+                    correspondiente. si no, se pasa a la siguiente ruta. <br>
+                    En express, es posible indicasr explícitamente si se desea
+                    terminar el procesamiento del request, o incluso, continuar
+                    en la lista de handlers, aún si se ha ejecutado el código
+                    propio.
                 </p></li>
                 </ul>
     </body>
